--- a/assets/scss/global/utilities/_vars.scss
+++ b/assets/scss/global/utilities/_vars.scss
@@ -7,8 +7,10 @@ $black: #000000;
 /*--------------------------------------------------------------
 # Design principal colors
 --------------------------------------------------------------*/
-$primary: #3f83bf;
-$secondary: #29557c;
+$primary: #242F9B;
+$secondary: #646FD4;
+$tertiary: #0AA1DD;
+$pale: #2155CD;
 
 $greys: ('light': #D3D3D3,
 	'regular': #808080,
