--- a/assets/scss/modules/_recommended_videos_slider.scss
+++ b/assets/scss/modules/_recommended_videos_slider.scss
@@ -1,5 +1,7 @@
 .m-recommended-videos {
     background-color: rgb(180, 180, 180);
+    position: relative;
+    
     &__container {
         padding-top: 80px;
         padding-bottom: 96px;
