--- a/assets/scss/modules/_intro.scss
+++ b/assets/scss/modules/_intro.scss
@@ -1,5 +1,5 @@
 .m-intro {
-    background: linear-gradient(to bottom, #adf5e4, #9cf4df);;
+    background: linear-gradient(to bottom, #242F9B, #646FD4);
 
     &__container {
         display: grid;
@@ -21,7 +21,7 @@
 
     &__text-wrapper {
         z-index: 1;
-        background: linear-gradient(to bottom, #80f1d6e8, #4fa8ab);;
+        background: linear-gradient(to bottom, #9ba3ebed, #646fd4f2);
         border-radius: 35px;
         padding: 40px 50px;
         position: relative;
