--- a/assets/scss/modules/_intro.scss
+++ b/assets/scss/modules/_intro.scss
@@ -21,7 +21,7 @@
 
     &__text-wrapper {
         z-index: 1;
-        background: linear-gradient(to bottom, #9ba3ebed, #646fd4f2);
+        background: linear-gradient(to bottom, #242F9B, #646fd4);
         border-radius: 35px;
         padding: 40px 50px;
         position: relative;
@@ -44,7 +44,7 @@
             content: '';
             display: block;
             height: 8px;
-            background-color: #9cf4df;
+            background-color: #646FD4;
             width: 100%;
             border-radius: 4px;
             margin-top: 25px;
