--- a/assets/scss/pages/page-videos_channel.scss
+++ b/assets/scss/pages/page-videos_channel.scss
@@ -7,4 +7,4 @@
 @import "../modules/video_slider";
 @import "../modules/recommended_videos_slider";
 @import "../modules/archive_video";
-@import "../modules/featured_books";
+@import "../modules/youtube_invite";
