--- a/assets/scss/global/base/_footer.scss
+++ b/assets/scss/global/base/_footer.scss
@@ -51,6 +51,7 @@
             font-size: 18px;
             color: white;
             margin-bottom: 40px;
+            margin-top: 10px;
         }
 
         .yt-username {
