--- a/assets/scss/global/utilities/_reset.scss
+++ b/assets/scss/global/utilities/_reset.scss
@@ -121,7 +121,7 @@ body {
 	line-height: 1em;
 	margin: 0px;
 	padding: 0px;
-	padding-top: 152px;
+	//padding-top: 152px;
 	overflow-x: hidden;
 }
 
