--- a/assets/scss/modules/_archive_video.scss
+++ b/assets/scss/modules/_archive_video.scss
@@ -1,4 +1,15 @@
 .m-video-archive {
+    padding-top: 120px;
+    padding-bottom: 120px;
+
+    h2 {
+        font-size: 30px;
+        line-height: 42px;
+        color: $primary;
+        font-weight: 600;
+        margin-bottom: 40px;
+        text-align: center;
+    }
     &__container {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -58,20 +69,53 @@
         &-info {
             h4,
             p {
-                color: #101010;
+                color: #696969;
             }
     
             h4 {
+                cursor: pointer;
                 font-size: 15px;
                 line-height: 21px;
                 font-weight: 600;
                 text-transform: uppercase;
                 margin-bottom: 10px;
                 letter-spacing: -0.02em;
+                transition: all .5s;
+
+                &:hover {
+                    color: #101010;
+                    transition: all .5s;
+                }
             }
 
             p {
                 font-size: 14px;
+            }
+        }
+
+    }
+
+    .c-video-modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100vw;
+        background-color: #10101093;
+        z-index: 2;
+
+        &__wrapper {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            z-index: 1;
+
+            iframe {
+                position: relative;
+                z-index: 3;
             }
         }
     }
