--- a/assets/scss/modules/_recommended_videos_slider.scss
+++ b/assets/scss/modules/_recommended_videos_slider.scss
@@ -1,5 +1,5 @@
 .m-recommended-videos {
-    background-color: rgb(180, 180, 180);
+    background-color: rgba(236, 236, 236, 0.596);
     position: relative;
     
     &__container {
@@ -19,12 +19,12 @@
             line-height: 58px;
             margin-bottom: 20px;
             font-weight: 800;
-            color: $white;
+            color: #3f83bf;
         }
     
         &-copy {
             text-align: center;
-            color: white;
+            color: #3f83bf;
             margin-bottom: 20px;
         }
         
@@ -99,6 +99,31 @@
                 transform: scale(1.1);
                 transition: all 0.25s;
                 cursor: pointer;
+            }
+        }
+    }
+
+    .c-video-modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100vw;
+        background-color: #10101093;
+        z-index: 2;
+
+        &__wrapper {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            z-index: 1;
+
+            iframe {
+                position: relative;
+                z-index: 3;
             }
         }
     }
