--- a/assets/scss/modules/_swiper_gallery.scss
+++ b/assets/scss/modules/_swiper_gallery.scss
@@ -11,28 +11,28 @@
   &__img {
     object-fit: cover;
     width: 100%;
-    height: 89vh;
+    height: 100vh;
     vertical-align: top;
   }
 
   &__pre-text {
-    width: 752px;
+    width: 754px;
     height: 200px;
     z-index: 1;
-    background-color: $pale;
+    background-color: #242F9B;
     padding: 30px;
     border-radius: 11px;
     position: absolute;
     bottom: 30px;
-    left: 30px;
+    left: 120px;
   }
 
   &__text-wrapper {
-    max-width: 791px;
+    width: 754px;
     max-height: max-content;
     position: absolute;
     bottom: 50px;
-    left: 50px;
+    left: 140px;
     z-index: 1;
     background-color: $tertiary;
     padding: 30px;
@@ -58,7 +58,7 @@
       content: '';
       display: block;
       height: 8px;
-      background-color: $pale;
+      background-color: #242F9B;
       width: 100%;
       border-radius: 4px;
       margin-top: 20px;
@@ -69,6 +69,11 @@
     font-size: 22px;
     line-height: 30px;
     font-weight: 400;
+  }
+
+  .swiper-pagination {
+    text-align: right;
+    padding-right: 30px;
   }
 
   /*.swiper-button-prev,
