Search Feature Added - Not Finished

--- a/assets/scss/pages/page-books_channel.scss
+++ b/assets/scss/pages/page-books_channel.scss
@@ -9,3 +9,4 @@
 @import "../modules/archive_video";
 @import "../modules/youtube_invite";
 @import "../modules/archive_book";
+@import "../cards/alphabetic";
