--- a/assets/scss/pages/page-videos_channel.scss
+++ b/assets/scss/pages/page-videos_channel.scss
@@ -8,3 +8,4 @@
 @import "../modules/recommended_videos_slider";
 @import "../modules/archive_video";
 @import "../modules/youtube_invite";
+@import "../cards/alphabetic";
