--- a/assets/scss/global/utilities/_vars.scss
+++ b/assets/scss/global/utilities/_vars.scss
@@ -11,6 +11,7 @@ $primary: #242F9B;
 $secondary: #646FD4;
 $tertiary: #0AA1DD;
 $pale: #2155CD;
+$paler-pale: #768ec7;
 
 $greys: ('light': #D3D3D3,
 	'regular': #808080,
