--- a/assets/scss/pages/page-papers_channel.scss
+++ b/assets/scss/pages/page-papers_channel.scss
@@ -4,3 +4,6 @@
 @import "../modules/swiper_gallery";
 @import "../modules/featured_books";
 @import "../modules/video_slider";
+@import "../modules/archive_paper";
+@import "../components/pagination";
+@import "../components/paper";
