--- a/assets/scss/pages/page-videos_channel.scss
+++ b/assets/scss/pages/page-videos_channel.scss
@@ -1,6 +1,5 @@
 @import "../global/global";
 @import "../modules/left_right";
-@import "../modules/posts";
 @import "../modules/swiper_gallery";
 @import "../modules/three_cards";
 @import "../modules/intro";
@@ -9,3 +8,4 @@
 @import "../modules/archive_video";
 @import "../modules/youtube_invite";
 @import "../cards/alphabetic";
+@import "../components/video";
