--- a/assets/scss/modules/_archive_book.scss
+++ b/assets/scss/modules/_archive_book.scss
@@ -10,75 +10,11 @@
         margin-bottom: 40px;
         text-align: center;
     }
-    &__container {
+
+    .c-pagination__container {
         display: grid;
         grid-template-columns: 1fr 1fr;
         column-gap: 40px;
         row-gap: 60px;
-    }
-
-    &__card {
-        display: flex;
-        padding: 10px;
-        border-radius: 10px;
-        background-color: #00000005;
-
-        &-img-container {
-            max-height: 180px !important;
-            position: relative;
-            overflow: hidden;
-            transition: all 1s;
-            border-radius: 3.2px;
-            margin-right: 25px;
-
-            img {
-                max-height: 220px !important;
-            }
-        }
-
-        &-info {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: space-between;
-
-            h4,
-            p {
-                color: #696969;
-            }
-    
-            h4 {
-                cursor: pointer;
-                font-size: 18px;
-                line-height: 24px;
-                font-weight: 600;
-                text-transform: uppercase;
-                margin-bottom: 20px;
-                letter-spacing: -0.02em;
-                transition: all .5s;
-                max-width: 386px;
-
-                &:hover {
-                    color: #101010;
-                    transition: all .5s;
-                }
-            }
-
-            p {
-                font-size: 14px;
-            }
-        }
-
-        &-cta {
-           position: relative;
-           top: -11px;
-           font-size: 12px;
-
-           &:hover {
-               background-color: #3f83bf;
-               color: white;
-           }
-        }
-
     }
 }
