--- a/assets/scss/pages/page-books_channel.scss
+++ b/assets/scss/pages/page-books_channel.scss
@@ -9,3 +9,4 @@
 @import "../modules/youtube_invite";
 @import "../modules/archive_book";
 @import "../components/book";
+@import "../components/pagination";
