--- a/assets/scss/pages/page-papers_channel.scss
+++ b/assets/scss/pages/page-papers_channel.scss
@@ -4,6 +4,6 @@
 @import "../modules/swiper_gallery";
 @import "../modules/featured_books";
 @import "../modules/video_slider";
-@import "../modules/archive_paper";
+@import "../modules/archive_papers";
 @import "../components/pagination";
 @import "../components/paper";
