--- a/assets/scss/pages/page-videos_channel.scss
+++ b/assets/scss/pages/page-videos_channel.scss
@@ -9,3 +9,4 @@
 @import "../modules/youtube_invite";
 @import "../cards/alphabetic";
 @import "../components/video";
+@import "../components/pagination";
