--- a/assets/scss/modules/_archive_papers.scss
+++ b/assets/scss/modules/_archive_papers.scss
@@ -2,6 +2,15 @@
     padding-top: 120px;
     padding-bottom: 120px;
 
+    .container>h2 {
+        font-size: 30px;
+        line-height: 42px;
+        color: $primary;
+        font-weight: 600;
+        margin-bottom: 40px;
+        text-align: center;
+    }
+
     .c-pagination__container {
         display: grid;
         grid-template-columns: 1fr;
