15-feature: video modal bug fixed

--- a/assets/scss/modules/_recommended_videos_slider.scss
+++ b/assets/scss/modules/_recommended_videos_slider.scss
@@ -73,6 +73,7 @@
             left: 20px;
             color: white;
             font-size: 22px;
+            line-height: 26px;
             transition: all 0.5s;
         }
 
@@ -106,6 +107,7 @@
 
     .swiper-pagination {
         bottom: 60px;
+        z-index: 2;
     }
 }
 
