--- a/assets/scss/modules/_intro.scss
+++ b/assets/scss/modules/_intro.scss
@@ -4,8 +4,12 @@
     &__container {
         display: grid;
         grid-template-columns: 1fr 3fr;
-        padding-top: 85px;
-        padding-bottom: 85px;
+        padding: 70px 0;
+
+        @include respond-below('sl') {
+            grid-template-columns: 1fr;
+            justify-items: center;
+        }
     }
 
     &__img-wrapper {
@@ -17,13 +21,18 @@
         left: 77px;
         border-radius: 60px;
         box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+
+        @include respond-below('sl') {
+            left: 0;
+            top: 30px;
+        }
     }
 
     &__text-wrapper {
         z-index: 1;
         background: linear-gradient(to bottom, #242F9B, #646fd4);
-        border-radius: 35px;
-        padding: 40px 50px;
+        border-radius: 30px;
+        padding: 30px;
         position: relative;
         top: 0;
         bottom: 0;
@@ -32,6 +41,13 @@
         left: -40px;
         color: $white;
         box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+
+        @include respond-below('sl') {
+            left: 0;
+            top: initial;
+            bottom: 30px;
+
+        }
     }
 
     &__title {
@@ -55,5 +71,10 @@
         font-size: 18px;
         line-height: 26px;
         font-weight: 400;
+
+        @include respond-below('sl') {
+            font-size: 20px;
+            line-height: 28px;
+        }
     }
 }
