--- a/assets/scss/modules/_swiper_gallery.scss
+++ b/assets/scss/modules/_swiper_gallery.scss
@@ -15,6 +15,11 @@
     vertical-align: top;
   }
 
+  &__heading-container {
+    position: absolute;
+    bottom: 0;
+  }
+
   &__pre-text {
     width: 754px;
     height: 200px;
@@ -25,18 +30,50 @@
     position: absolute;
     bottom: 30px;
     left: 120px;
+
+    @include respond-below('sl') {
+      width: 90%;
+      left: -7%;
+      right: 0;
+      margin: auto;
+      height: 100%;
+    }
+
+    @include respond-below('sm') {
+      width: 90%;
+      left: -7%;
+      right: 0;
+      margin: auto;
+      height: 100%;
+    }
   }
 
   &__text-wrapper {
-    width: 754px;
+    max-width: 754px;
     max-height: max-content;
-    position: absolute;
+    position: relative;
     bottom: 50px;
     left: 140px;
-    z-index: 1;
+    z-index: 2;
     background-color: $tertiary;
     padding: 30px;
     border-radius: 11px;
+
+    @include respond-below('sl') {
+      width: 90%;
+      left: -1%;
+      right: 0;
+      margin: auto;
+      bottom: 40px;
+    }
+
+    @include respond-below('sm') {
+      width: 90%;
+      left: -1%;
+      right: 0;
+      margin: auto;
+      bottom: 40px;
+    }
   }
 
   &__title,
@@ -53,6 +90,11 @@
     letter-spacing: -0.02em;
     font-weight: 800;
     margin-bottom: 20px;
+
+    @include respond-below('sm') {
+      font-size: 30px;
+      line-height: 42px;
+    }
 
     &::after {
       content: '';
