--- a/assets/scss/modules/_archive_video.scss
+++ b/assets/scss/modules/_archive_video.scss
@@ -21,7 +21,7 @@
         position: fixed;
         top: 0;
         left: 0;
-        height: 100%;
+        height: 100vh;
         width: 100vw;
         background-color: #10101093;
         z-index: 2;
@@ -35,70 +35,18 @@
             position: relative;
             z-index: 1;
 
+            img {
+                position: absolute;
+                top: 15px;
+                right: 35px;
+                cursor: pointer;
+                transform: scale(1.1);
+            }
+
             iframe {
                 position: relative;
                 z-index: 3;
             }
         }
     }
-
-    /*.pagination {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        width: 120px;
-        height: 120px;
-        margin: auto;
-        text-align: center;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 18px;
-        font-weight: 900;
-
-        a,
-        span.current {
-            text-decoration: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 25px;
-            height: 24px;
-            z-index: 1;
-            position: relative;
-            transition: all 1s;
-
-            &::after {
-                content: '';
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                margin: auto;
-                border-radius: 100%;
-                background-color: #23a5d9;
-                z-index: -1;
-                opacity: 0;
-                transition: all 1s;
-            }
-        }
-
-        span.current,
-        a:hover {
-            color: $white;
-            transition: all 1s;
-            &::after {
-                opacity: 1;
-            }
-        }
-
-        a:hover {
-            &::after {
-                background-color: #23a5d98a;
-            }
-        }
-
-        a.next {
-            height: 25px;
-        }
-    }*/
 }
