--- a/assets/scss/modules/_recommended_videos_slider.scss
+++ b/assets/scss/modules/_recommended_videos_slider.scss
@@ -20,6 +20,10 @@
             margin-bottom: 20px;
             font-weight: 800;
             color: #3f83bf;
+
+            @include respond-below('sl') {
+                font-size: 40px;
+            }
         }
     
         &-copy {
@@ -33,6 +37,7 @@
             font-weight: 800;
             border: 1px solid #3f83bf;
             color: #3f83bf;
+            font-size: 14px;
 
             &:hover {
                 background-color: #abd8ff;
@@ -49,6 +54,10 @@
         overflow: hidden;
         transition: all 1s;
         border-radius: 3.2px;
+
+        @include respond-below('sl') {
+            max-height: 200px !important;
+        }
 
         &:hover {
 
@@ -107,7 +116,7 @@
 
     .swiper-pagination {
         bottom: 60px;
-        z-index: 2;
+        z-index: 1;
     }
 }
 
@@ -115,7 +124,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 100vh;
     width: 100vw;
     background-color: #10101093;
     z-index: 2;
@@ -128,6 +137,14 @@
         justify-content: center;
         position: relative;
         z-index: 1;
+
+        img {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            cursor: pointer;
+            transform: scale(1.1);
+        }
 
         iframe {
             position: relative;
