--- a/assets/scss/pages/page-books_channel.scss
+++ b/assets/scss/pages/page-books_channel.scss
@@ -1,12 +1,8 @@
 @import "../global/global";
-@import "../modules/left_right";
 @import "../modules/swiper_gallery";
-@import "../modules/three_cards";
 @import "../modules/intro";
-@import "../modules/video_slider";
 @import "../modules/recommended_videos_slider";
-@import "../modules/archive_video";
-@import "../modules/youtube_invite";
 @import "../modules/archive_book";
 @import "../components/book";
+@import "../components/paper";
 @import "../components/pagination";
