--- a/assets/scss/pages/page-videos_channel.scss
+++ b/assets/scss/pages/page-videos_channel.scss
@@ -1,12 +1,7 @@
 @import "../global/global";
-@import "../modules/left_right";
 @import "../modules/swiper_gallery";
-@import "../modules/three_cards";
-@import "../modules/intro";
-@import "../modules/video_slider";
-@import "../modules/recommended_videos_slider";
 @import "../modules/archive_video";
 @import "../modules/youtube_invite";
-@import "../cards/alphabetic";
 @import "../components/video";
 @import "../components/pagination";
+@import "../modules/featured_books"
