--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 /*!
-Theme Name: White Canvas - Boilerplate
-Theme URI: https://whitecanvas/
-Author: White Canvas
-Author URI: https://whitecanvas/
-Description: Boilerplate for White Canvas WordPress Sites
+Theme Name: Neurocirugia Argentina
+Theme URI: https://neurocirugiaargentina/
+Author: ConicDev
+Author URI: https://conicdev/
+Description: Custom Theme for Neurocirugia Argentina, designed and developed by ConicDev
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: wcanvas-boilerplate
+Text Domain: neurocirugia-argentina
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
 
-White Canvas - Boilerplate is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
+Neurocirugia Argentina is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 */
