--- a/assets/scss/pages/page-books_channel.scss
+++ b/assets/scss/pages/page-books_channel.scss
@@ -2,6 +2,7 @@
 @import "../modules/swiper_gallery";
 @import "../modules/intro";
 @import "../modules/recommended_videos_slider";
+@import "../modules/featured_papers";
 @import "../modules/archive_book";
 @import "../components/book";
 @import "../components/paper";
