--- a/assets/scss/global/base/_navbar.scss
+++ b/assets/scss/global/base/_navbar.scss
@@ -38,6 +38,7 @@
         left: 0;
         top: 0;
         min-height: 14px;
+        border: none;
 
         @media (max-width: 992px) {
             display: block;
@@ -51,7 +52,7 @@
             display: block;
             width: 100%;
             height: 2px;
-            background-color: $black;
+            background-color: #23a5d9;
             transition: .3s all;
             position: absolute;
             left: 0;
@@ -108,9 +109,10 @@
 
         //Expand attr working (mobile)
         &[aria-expanded="true"] {
-            height: 100vh;
+            height: 145px;
             overflow-x: hidden;
             overflow-y: scroll;
+            box-shadow: 0 0 10px #444;
         }
 
         .menu {
@@ -118,6 +120,8 @@
                 padding: 20px 30px;
                 height: 100%;
                 background-color: #444;
+                display: flex;
+                justify-content: space-evenly;
             }
         }
 
@@ -144,6 +148,10 @@
                 font-size: 18px;
                 transition: all .5s;
 
+                @media (max-width: 992px) {
+                    color: white;
+                }
+
                 &:hover {
                     color: $pale;
                     transition: all .5s;
@@ -152,7 +160,7 @@
 
             //Active page item (<li>)
             [current-page="true"] {
-                color: $pale;
+                color: #23a5d9;
                 font-weight: 600;
                 transition: all .5s;
             }
