--- a/assets/scss/global/utilities/_vars.scss
+++ b/assets/scss/global/utilities/_vars.scss
@@ -21,6 +21,9 @@ $grays: $greys;
 /*--------------------------------------------------------------
 # Fonts
 --------------------------------------------------------------*/
+
+$title-font: Alata, VarelaRound, "Gill Sans MT", "Gill Sans", Arial, sans-serif;
+
 $font: VarelaRound,
 "Gill Sans MT",
 "Gill Sans",
