--- a/assets/scss/components/_book.scss
+++ b/assets/scss/components/_book.scss
@@ -5,6 +5,14 @@
     border-radius: 10px;
     background-color: #00000005;
 
+    @include respond-below('sl') {
+        grid-template-columns: 1fr;
+    }
+
+    @include respond-below('sm') {
+        padding: 10px 10px 15px;
+    }
+
     &-img-container {
         max-height: 280px !important;
         position: relative;
@@ -13,11 +21,21 @@
         border-radius: 3.2px;
         margin-right: 25px;
 
+        @include respond-below('sm') {
+            max-height: 150px !important;
+            margin-right: 0;
+        }
+
         img {
             max-height: 280px !important;
             object-fit: cover;
             height: 100%;
             width: 100%;
+
+            @include respond-below('sm') {
+                max-height: 150px !important;
+                object-position: center;
+            }
         }
     }
 
@@ -41,17 +59,44 @@
             letter-spacing: -0.02em;
             transition: all .5s;
             max-width: 386px;
+
+            @include respond-below('sm') {
+                font-size: 16px;
+                line-height: 22px;
+                margin-bottom: 15px;
+            }
         }
 
         p {
             font-size: 14px;
         }
+
+        div:first-of-type {
+            @include respond-below('sm') {
+                margin-bottom: 15px;
+            }
+        }
+
+        div:last-of-type {
+            @include respond-below('sm') {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                width: 100%;
+            }
+        }
     }
 
     &-cta {
-       position: relative;
-       top: -11px;
-       font-size: 12px;
+        position: relative;
+        top: -11px;
+        font-size: 12px;
+
+        @include respond-below('sm') {
+            top: 0;
+            width: 100%;
+            text-align: center;
+        }
 
        &:hover {
            background-color: #3f83bf;
