--- a/assets/scss/global/base/_footer.scss
+++ b/assets/scss/global/base/_footer.scss
@@ -1,6 +1,6 @@
 .b-footer{
     background-color: #444;
-    padding: 80px 0;
+    padding: 70px 0;
 
     &__container{
         display: flex;
@@ -10,9 +10,46 @@
 
     &__brand{
         color: $primary;
+
+        @include respond-below('sl') {
+            flex-basis: 50%;
+        }
+
+        @include respond-below('sm') {
+            flex-basis: 52%;
+
+            img {
+                max-width: 100%;
+            }
+        }
     }
 
     &__menu{
+        @include respond-below('sl') {
+            flex-basis: 48%;
+            margin-bottom: 5px;
+        }
+
+        @include respond-below('sm') {
+            flex-basis: 48%;
+            margin-bottom: 15px;
+        }
+
+        .menu {
+            padding-left: 25px;
+            border-left: 5px solid #0AA1DD;
+
+            @include respond-below('sl') {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                padding-left: 0;
+                border-left: none;
+                padding-right: 25px;
+                border-right: 5px solid #0AA1DD;
+            }
+        }
+
         .menu-item-has-children{
             a{
                 display: none;
@@ -47,6 +84,26 @@
     }
 
     &__message {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-bottom: 40px;
+
+        @include respond-below('sl') {
+            flex-basis: 100%;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            flex-direction: column;
+            border-right: 5px solid white;
+            border-left: 5px solid white;
+            margin-bottom: 20px;
+        }
+
+        @include respond-below('sm') {
+            border-left: none;
+        }
+
         &-text {
             font-size: 18px;
             color: white;
@@ -60,4 +117,37 @@
         }
     }
 
+    &__copyright {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        position: relative;
+        top: 40px;
+
+        @include respond-below('sm') {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        p {
+            color: $white;
+            font-size: 14px;
+            line-height: 28px;
+            font-style: italic;
+
+            @include respond-below('sm') {
+                line-height: 20px;
+            }
+
+            &:last-of-type {
+                text-align: right;
+
+                @include respond-below('sm') {
+                    text-align: left;
+                    margin-top: 5px;
+                }
+            }
+        }
+    }
 }
