--- a/assets/scss/global/base/_navbar.scss
+++ b/assets/scss/global/base/_navbar.scss
@@ -121,7 +121,7 @@
                 height: 100%;
                 background-color: #444;
                 display: flex;
-                justify-content: space-evenly;
+                justify-content: space-between;
             }
         }
 
@@ -134,6 +134,12 @@
                 display: block;
                 margin-right: initial;
                 margin-bottom: 10px;
+            }
+
+            @include respond-below('sl') {
+                display: flex;
+                align-items: center;
+                margin-bottom: 0;
             }
 
             &:last-child {
