--- a/assets/scss/global/utilities/_fonts.scss
+++ b/assets/scss/global/utilities/_fonts.scss
@@ -26,3 +26,10 @@
 	font-weight: 400;
 	font-display: swap;
 }
+
+@font-face {
+	font-family: Alata;
+	src: url("../fonts/Alata-Regular.ttf") format("truetype");
+	font-weight: 400;
+	font-display: swap;
+}
