--- a/assets/scss/modules/_archive_book.scss
+++ b/assets/scss/modules/_archive_book.scss
@@ -2,6 +2,11 @@
     padding-top: 120px;
     padding-bottom: 120px;
 
+    @include respond-below('sm') {
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+
     h2 {
         font-size: 30px;
         line-height: 42px;
@@ -16,5 +21,9 @@
         grid-template-columns: 1fr 1fr;
         column-gap: 25px;
         row-gap: 10px;
+
+        @include respond-below('sl') {
+            grid-template-columns: 1fr;
+        }
     }
 }
