--- a/assets/scss/modules/_archive_video.scss
+++ b/assets/scss/modules/_archive_video.scss
@@ -2,6 +2,11 @@
     padding-top: 120px;
     padding-bottom: 120px;
 
+    @include respond-below('sm') {
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+
     h2 {
         font-size: 30px;
         line-height: 42px;
@@ -15,6 +20,10 @@
         grid-template-columns: repeat(3, 1fr);
         column-gap: 20px;
         row-gap: 40px;
+
+        @include respond-below('sl') {
+            grid-template-columns: 1fr;
+        }
     }
 
     .c-video-modal {
@@ -41,11 +50,21 @@
                 right: 35px;
                 cursor: pointer;
                 transform: scale(1.1);
+
+                @include respond-below('sm') {
+                    top: 20px;
+                    right: 20px;
+                }
             }
 
             iframe {
                 position: relative;
                 z-index: 3;
+
+                @include respond-below('sm') {
+                    width: 100%;
+                    height: 42%;
+                }
             }
         }
     }
