--- a/assets/scss/modules/_featured_books.scss
+++ b/assets/scss/modules/_featured_books.scss
@@ -4,6 +4,16 @@
     &__container {
         padding-top: 120px;
         padding-bottom: 120px;
+
+        @include respond-below('sl') {
+            padding-top: 80px;
+            padding-bottom: 80px;
+        }
+
+        @include respond-below('sm') {
+            padding-top: 70px;
+            padding-bottom: 70px;
+        }
     }
 
     &__books {
@@ -15,7 +25,6 @@
     }
 
     &__card {
-        max-width: 286px;
         max-height: max-content;
         background-color: rgba(236, 236, 236, 0.596);
     }
@@ -31,6 +40,11 @@
             object-position: center;
             width: 100%;
             height: 100%;
+        }
+
+        @include respond-below('sm') {
+            height: 55%;
+            margin-bottom: 35px;
         }
     }
 
@@ -83,6 +97,11 @@
             font-size: 40px;
             line-height: 48px;
         }
+
+        @include respond-below('sm') {
+            font-size: 30px;
+            line-height: 38px;
+        }
     }
 
     &__copy {
@@ -114,6 +133,10 @@
 
     .swiper-pagination {
         bottom: 200px;
+
+        @include respond-below('sm') {
+            bottom: 150px;
+        }
     }
 
     .swiper-button-prev,
@@ -121,6 +144,13 @@
         border: none;
         background-color: transparent;
         transition: all .5s;
+    }
+
+    .swiper-button-next {
+        right: 45px;
+        @include respond-below('sl') {
+            right: 2px;
+        }
     }
 
     &__cta-container {
