--- a/assets/scss/modules/_featured_papers.scss
+++ b/assets/scss/modules/_featured_papers.scss
@@ -2,25 +2,36 @@
     &__container {
         padding-top: 80px;
         padding-bottom: 100px;
+
+        @include respond-below('sm') {
+            padding-top: 70px;
+            padding-bottom: 70px;
+        }
     }
 
     &__heading {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-bottom: 40px;
+        margin-bottom: 30px;
     }
 
     &__title {
         text-align: center;
         font-size: 50px;
         line-height: 58px;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
         font-weight: 800;
         color: #3f83bf;
 
         @include respond-below('sl') {
             font-size: 40px;
+            line-height: 48px;
+        }
+
+        @include respond-below('sm') {
+            font-size: 30px;
+            line-height: 38px;
         }
     }
 
@@ -28,7 +39,6 @@
         font-size: 16px;
         text-align: center;
         color: #3f83bf;
-        margin-bottom: 20px;
     }
 
     &__posts {
