--- a/assets/scss/modules/_intro.scss
+++ b/assets/scss/modules/_intro.scss
@@ -10,28 +10,43 @@
             grid-template-columns: 1fr;
             justify-items: center;
         }
+
+        @include respond-below('sm') {
+            padding-left: 30px;
+            padding-right: 30px;
+        }
     }
 
     &__img-wrapper {
         z-index: 0;
+
+        @include respond-below('sm') {
+            display: flex;
+            width: 100%;
+        }
     }
 
     &__img {
         position: relative;
         left: 77px;
-        border-radius: 60px;
+        border-radius: 20px;
         box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 
         @include respond-below('sl') {
             left: 0;
             top: 30px;
         }
+
+        @include respond-below('sm') {
+            max-width: 90%;
+            margin: 0 auto;
+        }
     }
 
     &__text-wrapper {
         z-index: 1;
         background: linear-gradient(to bottom, #242F9B, #646fd4);
-        border-radius: 30px;
+        border-radius: 20px;
         padding: 30px;
         position: relative;
         top: 0;
@@ -48,6 +63,10 @@
             bottom: 30px;
 
         }
+        
+        @include respond-below('sm') {
+            padding: 30px 15px;
+        }
     }
 
     &__title {
@@ -55,6 +74,11 @@
         line-height: 40px;
         font-weight: 600;
         margin-bottom: 25px;
+
+        @include respond-below('sm') {
+            font-size: 25px;
+            line-height: 31px;
+        }
 
         &::after {
             content: '';
@@ -75,6 +99,11 @@
         @include respond-below('sl') {
             font-size: 20px;
             line-height: 28px;
+        }
+
+        @include respond-below('sm') {
+            font-size: 18px;
+            line-height: 24px;
         }
     }
 }
