--- a/assets/scss/modules/_recommended_videos_slider.scss
+++ b/assets/scss/modules/_recommended_videos_slider.scss
@@ -3,8 +3,13 @@
     position: relative;
     
     &__container {
-        padding-top: 80px;
-        padding-bottom: 96px;
+        padding-top: 100px;
+        padding-bottom: 150px;
+
+        @include respond-below('sm') {
+            padding-top: 70px;
+            padding-bottom: 130px;
+        }
     }
 
     &__heading {
@@ -115,8 +120,12 @@
     }
 
     .swiper-pagination {
-        bottom: 60px;
+        bottom: 100px;
         z-index: 1;
+
+        @include respond-below('sm') {
+            bottom: 86px;
+        }
     }
 }
 
@@ -144,11 +153,21 @@
             right: 35px;
             cursor: pointer;
             transform: scale(1.1);
+
+            @include respond-below('sm') {
+                top: 20px;
+                right: 20px;
+            }
         }
 
         iframe {
             position: relative;
             z-index: 3;
+
+            @include respond-below('sm') {
+                width: 100%;
+                height: 42%;
+            }
         }
     }
 }
