--- a/assets/scss/modules/_swiper_gallery.scss
+++ b/assets/scss/modules/_swiper_gallery.scss
@@ -21,22 +21,23 @@
   }
 
   &__pre-text {
-    width: 754px;
+    width: 100%;
     height: 200px;
     z-index: 1;
     background-color: #242F9B;
     padding: 30px;
-    border-radius: 11px;
+    border-radius: 20px;
     position: absolute;
-    bottom: 30px;
-    left: 120px;
+    bottom: 40px;
+    left: 130px;
 
     @include respond-below('sl') {
       width: 90%;
       left: -7%;
       right: 0;
       margin: auto;
-      height: 100%;
+      height: 100%;    
+      bottom: 32px;
     }
 
     @include respond-below('sm') {
@@ -57,18 +58,18 @@
     z-index: 2;
     background-color: $tertiary;
     padding: 30px;
-    border-radius: 11px;
-
+    border-radius: 20px;
+    
     @include respond-below('sl') {
       width: 90%;
-      left: -1%;
+      left: -2%;
       right: 0;
       margin: auto;
       bottom: 40px;
+      max-width: 90%;
     }
 
     @include respond-below('sm') {
-      width: 90%;
       left: -1%;
       right: 0;
       margin: auto;
@@ -78,7 +79,7 @@
 
   &__title,
   &__copy {
-    font-family: VarelaRound;
+    font-family: $title-font;
     text-align: left;
     color: white;
   }
@@ -90,6 +91,7 @@
     letter-spacing: -0.02em;
     font-weight: 800;
     margin-bottom: 20px;
+    letter-spacing: 2px;
 
     @include respond-below('sm') {
       font-size: 30px;
