--- a/assets/scss/modules/_youtube_invite.scss
+++ b/assets/scss/modules/_youtube_invite.scss
@@ -1,11 +1,21 @@
 .m-youtube-invite {
-    background-color: azure;
+    background-color: rgb(190, 224, 224);
     &__container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         width: 100%;
         padding-top: 120px;
         padding-bottom: 120px;
+
+        @include respond-below('sl') {
+            gap: 60px;
+        }
+
+        @include respond-below('sm') {
+            grid-template-columns: 1fr;
+            padding-top: 70px;
+            padding-bottom: 70px;
+        }
     }
 
     &__text-wrapper {
@@ -15,6 +25,14 @@
         height: 100%;
         justify-content: space-between;
         padding: 80px 0;
+
+        @include respond-below('sl') {
+            padding: 0;
+        }
+
+        @include respond-below('sm') {
+            gap: 30px;
+        }
 
         .button {
             background-color: #3f83bf;
@@ -44,6 +62,10 @@
         line-height: 30px;
         color: $primary;
         font-weight: 800;
+
+        @include respond-below('sl') {
+            text-align: center;
+        }
     }
 
     &__img {
@@ -56,5 +78,11 @@
         -moz-box-shadow: 5px 5px 19px -1px rgba(0,0,0,0.34);
     }
 
+    &__cta {
+        @include respond-below('sm') {
+            padding: 15px 40px;
+            font-size: 20px;        
+        }
+    }
 
 }
