--- a/assets/scss/pages/flexible-page.scss
+++ b/assets/scss/pages/flexible-page.scss
@@ -6,6 +6,8 @@
 @import "../modules/recommended_videos_slider";
 @import "../modules/featured_books";
 @import "../modules/featured_papers";
+@import "../modules/youtube_invite";
+
 @import "../components/paper";
 
 .m-featured-papers {
